--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "^2.3.7",
     "@types/degit": "^2.8.6",
     "@types/node": "22",
-    "biome": "^0.3.3",
     "esbuild": "^0.27.0",
     "typescript": "^5.9.3",
-    "zod": "4"
+    "zod": "^4.1.12"
   },
   "dependencies": {
     "@inquirer/prompts": "^8.0.1",
