--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "lamsalcn",
+  "name": "lamsal-kit",
   "bin": {
-    "lamsalcn": "lamsalcn.ts"
+    "lamsal-kit": "build/lamsal-kit.js"
   },
-  "repository": "romanlamsal/lamsalcn",
+  "repository": "romanlamsal/lamsal-kit",
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/lamsal-kit.js",
+  "types": "build/lamsal-kit.d.ts",
   "scripts": {
-    "build": "esbuild --bundle --platform=node --outfile=lamsalcn.js --format=esm lamsalcn.ts",
+    "build": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "package.json",
+    "build/lamsal-kit.js"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
     "@types/degit": "^2.8.6",
+    "@types/minimist": "^1.2.5",
     "@types/node": "22",
     "esbuild": "^0.27.0",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.13",
     "zod": "^4.1.12"
   },
   "dependencies": {
     "@inquirer/prompts": "^8.0.1",
-    "degit": "^2.8.4"
+    "degit": "^2.8.4",
+    "minimist": "^1.2.8"
   }
 }
