feat(pages): add github pages as registry and schema location

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   },
   "repository": "romanlamsal/lamsal-kit",
   "type": "module",
-  "version": "1.0.2",
-  "description": "",
+  "version": "1.0.7",
   "main": "build/lamsal-kit.js",
   "types": "build/lamsal-kit.d.ts",
   "scripts": {
     "build": "node build.js",
+    "release": "node build.js && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
