--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "composite": true
   },
   "exclude": ["node_modules"],
-  "include": ["cli/**/*", "registry/**/*", "lamsal-kit.ts", "biome.json", "build-registry.js"]
+  "include": ["cli/**/*", "registry/**/*", "lamsal-kit.ts", "biome.json", "scripts/build-registry.js"]
 }
