--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "build/lamsal-kit.js",
   "types": "build/lamsal-kit.d.ts",
   "scripts": {
-    "release": "node build.js && npm publish",
+    "release": "node scripts/build.js && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
