--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "@inquirer/prompts": "^8.0.1",
     "degit": "^2.8.4",
     "minimist": "^1.2.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
